# cross-sectional-alpha-research

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_research_backtest.py  visualizer.py
.agents/skills/factor-research-report-reproducer/: SKILL.md
.agents/skills/factor-research-report-reproducer/assets/: assumption_log_template.md  data_mapping_template.csv  final_report_template.md  (+1 more)
config/: data_paths.example.yaml
docs/: candidate_outcomes.md  methodology.md  public_release_scope.md  report_references.md
docs/case_studies/: PaperUBL.md  UBL.md  VolumeMomentumStrategy.md  strategy_comparison.md  ubl_lowvol_portfolio.md
examples/: render_public_results.py  run_sample_package.py
examples/sample_outputs/ubl_lowvol_study/: README.md
factor_mining/: PaperUBL_Strategy.py  README.md  backtest_engine_strategy.py  cpv_strategy.py  ctr_strategy.py  data_loader.py  factor_calculator.py  ideal_reversal_strategy.py  performance_evaluator.py  portfolio_manager.py  signal_generator.py  strategy_base.py  ubl_strategy.py  utr_strategy.py  volume_momentum_strategy.py
reports/paper_ubl/001__paper_ubl__enable_cost-True__n_groups-10__rebalance_freq-month_start__top_n-50/: config_and_metrics.json  report.md
reports/volume_momentum/001__volume_momentum__enable_cost-True__n_groups-10__rebalance_freq-month_start__top_n-50/: config_and_metrics.json  report.md
src/alpha_research/: __init__.py  metrics.py  portfolio.py  runner.py  visualization.py
tests/: test_sample_package.py
tools/: build_public_evidence.py
(+15 files in other folders)
